[Cherry pick] Query Killing refactor (#68)
* [Query Resource Isolation] Workload Configs (#15109)

* Workload Configs

* workload config

* Add API

* config

* Change config structure

* Propagation strategy

* Fix style check

* Cost spliting on update

* Table addition propagation

* perf

* Tests

* test

* test 2

* Review comments 1

* review comments 3

* review comments 3

* name change

* review comments 4

* Fix TableDoesNotExistError for hybrid tables in MSE queries in controller API (#16102)

* Make ThreadResourceUsageProvider a Helper/Utility Class. (#16051)

* ThreadResourceUsageProvider is a helper class. ThreadResourceContext tracks resource usage.

Fix updateConcurrently

* Rename to ThreadResourceSnapshot

* Clean up

* Add javadoc

* Done use auto closeable

* Checkstyle

* Fix compilation error

* Add back removed functions in SPI

* Remove private constructor because japicmp complains.

* Add setThreadResourceUsageProvider because of backward-incompatible checks

* Add setThreadResourceUsageProvider because of backward-incompatible checks

* Fix test

* Fix ThreadResourceSnapshot usage and tests

* Store cpu sample in nanoseconds.

* Reduce logs and improve logging when queries are terminated due to OOM. (#16172)

* Dynamic PerQueryCPUMemAccountant Config on Servers  (#16219)

* Checkpoint

* Register change handler

* Fix bugs. Manually tested

* Checkstyle

* Tests

* Add pre-check that values are default

* Undo typo fix

* Update QueryRunner to make use of window function overflow handling server configurations (#16108)

* Add multistage thread limiting configs at the broker and server level (#16080)

* Adding changes for supporting RLS (#16043)

* Use stats cache on error instead of the chained mechanism (#15992)

* Improve broker error messaging when broker is the one reporting the failure (#16076)

* Introduce MSE active and passive timeouts (#16075)

* Throttle SSE & MSE Tasks if Server heap usage is above a threshold (#16271)

* Fix Que